--- a/Lesson_1.ipynb
+++ b/Lesson_1.ipynb
@@ -10,11 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09292b69-f240-402f-a398-3a0e5a279615",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, None)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 2, print('hello')"
+   ]
   },
   {
    "cell_type": "code",
